Fix header logo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page">
     <header class="card header">
-      <span class="header-label">&lt;/HTML&gt;</span>
+      <a class="header-logo">&lt;/HTML&gt;</a>
       <h1 class="header-title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <ul class="theme-menu__list">
