Fix svg floppy aria-hidden

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     </main>
     <footer class="footer">
       <button type="button" onclick="window.modal.showModal();" aria-controls="modal" class="button button-save">
-        <svg class="floppy_image" viewBox="0 0 21 21">
+        <svg class="floppy_image" aria-hidden="true" viewBox="0 0 21 21">
           <use href="svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
@@ -427,7 +427,7 @@
     </footer>
     <dialog class="modal" id="modal">
       <div class="modal__content">
-        <svg class="modal__icon" viewBox="0 0 20 20">
+        <svg class="modal__icon" aria-hidden="true" viewBox="0 0 20 20">
           <use href="svg/floppy.svg#floppy" />
         </svg>
         <p>Вставьте дискету, чтобы продолжить</p>
