Fix class name filter images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="card-wrapper">
               <span class="card-image-label">&lt;START&gt;</span>
               <img
-                class="card-image image-1"
+                class="card-image image-filter-blur"
                 src="./images/image-1.jpg"
                 alt="Дорожка с надпью Start"
               >
@@ -101,7 +101,7 @@
             <div class="card-wrapper">
               <span class="card-image-label">&lt;START&gt;</span>
               <img
-                class="card-image image-2"
+                class="card-image image-filter-invert"
                 src="./images/image-2.jpg"
                 alt="Деревянные кубики с буквами, составленные в надпись Do it now."
               >
@@ -147,7 +147,7 @@
             <div class="card-wrapper">
               <span class="card-image-label">&lt;Question&gt;</span>
               <img
-                class="card-image image-3"
+                class="card-image image-filter-sepia"
                 src="https://media.giphy.com/media/l0HlRnAWXxn0MhKLK/giphy.gif"
                 alt="GIF - книга со знаком вопроса"
               >
@@ -193,7 +193,7 @@
             <div class="card-wrapper">
               <span class="card-image-label">&lt;CSS&gt;</span>
               <img
-                class="card-image image-4"
+                class="card-image image-filter-saturate"
                 src="https://media.giphy.com/media/yYSSBtDgbbRzq/giphy.gif"
                 alt="GIF - незакрывающиеся жалюзи"
               >
@@ -239,7 +239,7 @@
             <div class="card-wrapper">
               <span class="card-image-label">&lt;Pachca&gt;</span>
               <img
-                class="card-image image-5"
+                class="card-image image-filter-hue-rotate"
                 src="https://media.giphy.com/media/3oriO7wa3S0vXoNJks/giphy.gif"
                 alt="GIF - появляющиеся сообщения в переписке на экране смартфона"
               >
@@ -285,7 +285,7 @@
             <div class="card-wrapper">
               <span class="card-image-label">&lt;Experiments&gt;</span>
               <img
-                class="card-image image-6"
+                class="card-image image-filter-grayscale"
                 src="./images/image-6.jpg"
                 alt="Макетные платы с электронными компонентами и мультиметр"
               >
@@ -331,7 +331,7 @@
             <div class="card-wrapper">
               <span class="card-image-label">&lt;Review&gt;</span>
               <img
-                class="card-image image-7"
+                class="card-image image-filter-brightness"
                 src="./images/image-7.jpg"
                 alt="Человек работает за ноутбуком"
               >
@@ -377,7 +377,7 @@
             <div class="card-wrapper">
               <span class="card-image-label">&lt;Keep it up!&gt;</span>
               <img
-                class="card-image image-8"
+                class="card-image image-filter-multiple"
                 src="https://media.giphy.com/media/2XcCMmhcME1023tiph/giphy.gif"
                 alt="GIF - большой палец вверх. Надпись Keep it up"
               >
