Fix svg floppy size

--- a/index.html
+++ b/index.html
@@ -425,17 +425,18 @@
     </main>
     <dialog class="modal" id="modal">
       <div class="modal__content">
-        <svg class="modal__icon" aria-hidden="true" viewBox="0 0 20 20">
+        <svg class="modal__icon" aria-hidden="true" viewBox="0 0 21 21">
           <use href="svg/floppy.svg#floppy" />
         </svg>
-        <p>Вставьте дискету, чтобы продолжить</p>
+        <p>Вставьте дискету,чтобы продолжить</p>
       </div>
       <form method="dialog">
         <button type="submit" class="button modal__button">
-          <span class="button__text">ok</span>
+          <span class="button__text">ок</span>
         </button>
       </form>
     </dialog>
+
     <script src="./scripts/like.js"></script>
   </body>
 </html>
